Fix broken CSS for item task

--- a/src/app/missions/tasks/item-task/item-task.component.css
+++ b/src/app/missions/tasks/item-task/item-task.component.css
@@ -5,5 +5,4 @@
 .single-item {
     display: block;
     margin: 1em 0;
-    padding-left: 40px;
 }
